Add investor materials to gitignore (confidential)

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 # Confidential - not for public repo
 Investor_Target_Analysis.html
 Investor_Target_Analysis.docx
+Investor_Deck.pptx
+create_deck.py
